CHANGELOG file
--------------

The rules for CHANGELOG file:

- entries are sorted newest-first
- summarize sets of changes (do not reproduce every git log comment here).
- do not ever delete anything
- keep the format consistent (88 char width, Y/M/D date format) and do not use tabs but
  use spaces for formatting

.. inclusion-marker-changelog-start

Unreleased
----------

0.3.2 (2025/07/15)
------------------
- Fix bug in GreedySelection that would pick same item multiple times (#265)

0.3.1 (2025/06/30)
------------------
- Fix typos and make minor edits to ``PCovC`` and ``KPCovR`` docs (#254)
- Fix ``assertTrue`` typos in ``KPCovR`` testing suite (#254)
- Add ``KernelPCovC`` class and examples (#254)

0.3.0 (2025/06/12)
------------------
- Add ``_BasePCov`` class (#248)
- Add ``PCovC`` class that inherits shared functionality from ``_BasePCov`` (#248)
- Add ``PCovC`` testing suite and examples (#248)
- Modify ``PCovR`` to inherit shared functionality from ``_BasePCov`` (#248)
- Update to sklearn >= 1.7.0 and scipy >= 1.15.0 (#239, #257)
- Fixed moved function import from scipy and bump scipy dependency to 1.15.0 (#236)
- Fix rendering issues for `SparseKDE` and `QuickShift` (#236)
- Updating ``FPS`` to allow a numpy array of ints as an initialize parameter (#145)
- Supported Python versions are now ranging from 3.9 - 3.13.
- Updating ``skmatter.datasets`` submodule to support sklearn 1.5.0 (#229)
- Add `SparseKDE` class (#222)
- Add `QuickShift` class (#222)
- Add an example on how to conduct PAMM algorithm with `SparseKDE` and `QuickShift`
  (#222)
- Add H2O-BLYP-Piglet dataset (#222)
- Add two distance metrics that support the periodic boundry condition, 
  `periodic_pairwise_euclidean_distances` and `pairwise_mahalanobis_distances` (#222)

0.2.0 (2023/08/24)
------------------
- Add this ``CHANGELOG`` file (#198)
- Update example of WHO feature selection (#212)
- Rename ``RidgeRegression2FoldCV`` -> ``Ridge2FoldCV`` (#211)