@@ -16,7 +16,7 @@ jobs:
       - name: setup Python
         uses: actions/setup-python@v6
         with:
-          python-version: "3.13"
+          python-version: "3.14"
 
       - name: install tests dependencies
         run: python -m pip install tox
