@@ -11,8 +11,8 @@ jobs:
     strategy:
       matrix:
         python-version: 
-          - "3.10"
-          - "3.13"
+          - "3.11"
+          - "3.14"
 
     steps:
       - uses: actions/checkout@v6
