@@ -16,8 +16,8 @@ jobs:
           - macos-latest
           - windows-latest
         python-version: 
-          - "3.10"
-          - "3.13"
+          - "3.11"
+          - "3.14"
 
     steps:
     - uses: actions/checkout@v6
