@@ -34,7 +34,7 @@ You can then ``import skmatter`` and use scikit-matter in your projects!
 
 Tests
 -----
-We are testing our code for Python 3.10 and 3.13 on the latest versions of Ubuntu,
+We are testing our code for Python 3.11 and 3.14 on the latest versions of Ubuntu,
 macOS and Windows.
 
 .. marker-issues
